test/files/neg/t6446-show-phases.scala
// scalac: -Vphases
//

// testing compiler flag output only
object Test extends App
